--- a/src/index.css
+++ b/src/index.css
@@ -18,20 +18,24 @@
   background-image: url('../src/assets/AboutBg.png');
 }
 
-.title .b div {
+.title .wholeLine div {
   content: "";
   width: 40px;
   height: 2px;
   background-color: #6a95f7;
   transform: rotate(45deg);
 }
-.title .b {
+.title .wholeLine {
   height: 60px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.title .b .s {
+.title .wholeLine .LineTopLeft {
   transform: rotate(-45deg);
+}
+
+.right-section {
+  background-image: url('../src/assets/AboutImg2.png');
 }
